Closed Bug 258386 Opened 21 years ago Closed 21 years ago

Crash hitting 'b' when on the first message in a mailbox

Categories

(MailNews Core :: Backend, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jst, Assigned: Bienvenu)

Details

(Keywords: crash, fixed-aviary1.0, fixed1.7.5)

Attachments

(1 file)

I don't see this on Win32, but I consistently crash in the same place in nsMsgDBView::NavigateFromPos() on my linux system. Patch coming up...
Attachment #158171 - Flags: superreview?(mscott)
Attachment #158171 - Flags: review?(bienvenu)
Attachment #158171 - Flags: approval1.7.x?
Attachment #158171 - Flags: approval-aviary?
Comment on attachment 158171 [details] [diff] [review] Don't access array item at index -1 a=mkaply for everywhere when r/sr
Attachment #158171 - Flags: approval1.7.x?
Attachment #158171 - Flags: approval1.7.x+
Attachment #158171 - Flags: approval-aviary?
Attachment #158171 - Flags: approval-aviary+
Attachment #158171 - Flags: review?(bienvenu) → review+
Comment on attachment 158171 [details] [diff] [review] Don't access array item at index -1 Thanks for taking the time to file this and even better, fix it Johnny.
Attachment #158171 - Flags: superreview?(mscott) → superreview+
Fix checked in on trunk, aviary, and 1.7 branch.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Severity: normal → critical
Keywords: crash
w4m using today's 2004112206-0.9 tbird bits on linux fc2.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: