Fixing mailnews crash (bug 258386) when hitting 'b' to go to the previous message when on the first message. r=bienvenu@nventure.com, sr=mscott@mozilla.org